<resources>
    <string name="app_name">Kapa</string>
    <string name="kapa">kapa</string>
    <string name="welcome_message">Welcome to Kapa</string>
    <string name="login_fb_msg">Login with Facebook</string>
    <string name="login_mail_msg">Login with Mail</string>
    <string name="login_phone_msg">Login with Phone</string>
    <string name="settings">Settings</string>
    <string name="login">Login:</string>
    <string name="facebook_app_id">710467913573359</string>
    <string name="fb_login_protocol_scheme">fb710467913573359</string>
    <string name="facebook_client_token">bd0fc9f3027b98dbfc0046f44a25382f</string>
    <string name="title_activity_maps">Map</string>
    <string name="carpooling_for_a_safer_tomorrow">Carpooling for a safer tomorrow</string>
    <string name="KapaLogoWbg">TODO</string>
</resources>